--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "js-cookie": "^3.0.5",
     "date-fns": "^2.30.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
+    "tailwindcss-no-scrollbar": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
