--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "tailwindcss-no-scrollbar": "^1.0.1"
   },
   "devDependencies": {
